<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.dronecamp_project1.MainActivity">

    <ImageView
        android:id="@+id/drone_image"
        style="@style/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageContnentDescription"
        android:src="@drawable/mydrone2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/drone_image"
        android:orientation="vertical">

        <TextView
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            style="@style/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle" />

        <LinearLayout
            style="@style/infoViewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/informationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <TextView
                style="@style/informationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phoneText" />

        </LinearLayout>

        <LinearLayout
            style="@style/infoViewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/informationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <TextView
                style="@style/informationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailText" />

        </LinearLayout>

        <LinearLayout
            style="@style/infoViewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/informationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website" />

            <TextView
                style="@style/informationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/websiteText" />

        </LinearLayout>

        <LinearLayout
            style="@style/infoViewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/informationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress" />

            <TextView
                style="@style/informationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adressText" />

        </LinearLayout>

        <LinearLayout
            style="@style/infoViewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/informationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/availability" />

            <TextView
                style="@style/informationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/availabilityText" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
